--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React App</title>
+    <title>Чат Slack</title>
+    <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico" />
   </head>
   <body class="h-100 bg-light">
     <div class="h-100">
